--- a/index.less
+++ b/index.less
@@ -25,6 +25,7 @@ li {
 
 // common
 @import "./styles/index.less";
+@import "./styles//common/adaptive.less";
 
 // pages
 @import "./styles/pages/greetings.less";
