--- a/styles/pages/greetings.less
+++ b/styles/pages/greetings.less
@@ -1,90 +1,116 @@
-.container {
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    transition: transform 0.8s ease-in-out;
+@import '../common/adaptive.less';
+@import "../vars.less";
+
+.greetings {
     display: flex;
-    justify-content: space-between;
 
-    & .left-text {
-        z-index: 10;
-        text-align: start;
-        pointer-events: none;
-        animation: slideInFromLeft 2s ease-out forwards;
-        transition: opacity 0.5s ease-in-out;
-        max-width: 500px;
-        margin-top: 500px;
-
-        & h1 {
-            color: #cecece;
-            text-shadow: 0 0 10px #cecece;
-            font-size: 62px;
-            line-height: 130%;
-            font-weight: bold;
-        }
-
-        & p {
-            color: #ffffff; 
-            text-shadow: 0 0 5px #ffffff;
-        }
-    }
-
-    & .right-text {
-        z-index: 10;
-        text-align: start;
-        pointer-events: none;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        color: #cecece;
-        animation: slideInFromRight 2s ease-out forwards;
-        transition: opacity 0.5s ease-in-out;
-        max-width: 500px;
-        margin-top: 550px;
-
-        & p {
-            color: #cecece;
-            text-shadow: 0 0 10px #cecece;
-            font-size: 32px;
-            line-height: 130%;
-            font-weight: bold;
-        }
-
-        & ul {
-            display: flex;
-            flex-flow: row wrap;
-            column-gap: 10px;
-        }
-    }
-
-    .drag {
+    & .badge-card {
         position: absolute;
-        bottom: 5%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 10;
-        text-align: start;
-        pointer-events: none;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 20px;
-        color: #cecece;
-        text-shadow: 0 0 10px #cecece;
-        font-size: 12px;
-        animation: slideInFromBottom 1s ease-out forwards;
-        transition: opacity 0.5s ease-in-out;
+        left: 0;
+        top: 0;
+    }
 
-        & svg {
-            width: 50px;
-            fill: #cecece;
-            animation: dragBounce 1.3s ease-in-out infinite
+    & .container {
+        width: 100%;
+        height: 100vh;
+        overflow: hidden;
+        transition: transform 0.8s ease-in-out;
+        display: flex;
+        justify-content: space-between;
+        
+        & .left-text {
+            z-index: 10;
+            text-align: start;
+            pointer-events: none;
+            animation: slideInFromLeft 2s ease-out forwards;
+            transition: opacity 0.5s ease-in-out;
+            margin-top: 450px;
+        
+            & h1 {
+                color: #000000;
+                font-size: 80px;
+                line-height: 130%;
+                font-weight: bold;
+            }
+        
+            & p {
+                color: #000000; 
+                font-size: 24px;
+            }
+        }
+    
+        .drag {
+            position: absolute;
+            bottom: 5%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 10;
+            text-align: start;
+            pointer-events: none;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 20px;
+            color: #000000;
+            font-size: 12px;
+            animation: slideInFromBottom 1s ease-out forwards;
+            transition: opacity 0.5s ease-in-out;
+        
+            & svg {
+                width: 50px;
+                fill: #000000;
+                animation: dragBounce 1.3s ease-in-out infinite
+            }
         }
     }
+
+    .adaptive-tablet({
+        & .container {
+            & .left-text {
+                & h1 {
+                    font-size: 56px;
+                }
+                
+                & p {
+                    font-size: 16px;
+                }
+            }
+            
+            .drag {
+                bottom: 10%;
+                
+                & svg {
+                    width: 30px;
+                }
+            }
+        }
+    });
+
+    .adaptive-tablet-small({
+        & .container {
+            & .left-text {
+                margin-top: 650px;
+                
+                & h1 {
+                    font-size: 40px;
+                }
+                
+                & p {
+                    font-size: 18px;
+                }
+            }
+            
+            .drag {
+                bottom: 10%;
+                
+                & svg {
+                    width: 30px;
+                }
+            }
+        }
+    });
 }
-
-
 
 @keyframes slideInFromLeft {
     from {
@@ -121,16 +147,5 @@
     
     100% {
       transform: translateY(0px);   
-    }
-}
-
-@keyframes slideInFromRight {
-    from {
-        opacity: 0;
-        left: 150%;
-    }
-    to {
-        opacity: 1;
-        left: 75%;
     }
 }
